Make it so the resttarants details are flexin', meaning they wrap alongside each other; the picture is no longer so big on big displays

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ a img{
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
-nav {
+.main-nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
@@ -76,10 +76,10 @@ nav {
   justify-content: center;
   z-index: 1001;
 }
-nav h1 {
+.main-nav h1 {
   margin: auto;
 }
-nav h1 a {
+.main-nav h1 a {
   color: #fff;
   font-size: 1rem;
   font-weight: 200;
@@ -92,7 +92,6 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    /* width: calc(50% - 80px); */
 }
 
 /* Display list items side by side */
@@ -455,6 +454,19 @@ color: #373738
     flex-wrap: wrap;
     padding: 1rem 1rem 4rem;
   }
+  .restaurant-container-inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .restaurant-visual {
+    width: 45%;
+    max-width: 23rem;
+  }
+  .restaurant-details {
+    width: 45%;
+    margin-left: 2rem;
+  }
 }
 
 /*
@@ -486,6 +498,20 @@ color: #373738
     display: flex;
     flex-wrap: wrap;
     padding: 1rem 1rem 4rem;
+  }
+  .restaurant-container-inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .restaurant-visual {
+    width: 45%;
+    max-width: 30rem;
+  }
+  .restaurant-details {
+    width: 45%;
+    align-items: center;
+    margin-left: 2rem;
   }
 }
 
@@ -519,5 +545,19 @@ color: #373738
   }
   .review-card {
     width: 30%; /* 3 cards */
+  }
+  .restaurant-container-inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .restaurant-visual {
+    width: 45%;
+    max-width: 40rem;
+  }
+  .restaurant-details {
+    width: 45%;
+    align-items: center;
+    margin-left: 2rem;
   }
 }
